# Airsim-closeloop

./: .gitignore  Get_data.py  LLM_subimages.py  MLLM_Agent.py  README.md  close_loop.py  closeloop_testing.py  depth.csv  drone_movement.py  image_processing.py  monocular_depth.py  prompt_testing.py  prompts.json  prompts.py  prompts_gt.py  pyproject.toml  reasons.py  settings.json  stero_depth.py
LVLMRecovery/src/: MLLM_Agent.py  closeloop_testing.py
LVLMRecovery/src/LVLMRecovery/: closeloop_testing.py  drone_movement.py  prompt_testing.py
LVLMRecovery/src/LVLMRecovery/LiDAR/: LLM_subimages.py
LVLMRecovery/src/LVLMRecovery/airsim_settings/: settings.json  settings_UE4.json
LiDAR/: Get_data.py  LLM_subimages.py  lidar_baseline.py
Tracking/: Track_and_move.py  settings.json
airsim_settings/: README.md  settings.json  settings.md  settings_UE5.json  settings_UE5_tracking.json
depth_estimation/: monocular_depth.py
examples/: example1.py
src/LVLMRecovery/: MLLM_Agent.py  closeloop_testing.py  recovery_pipeline.py
src/LVLMRecovery/LiDAR/: lidar_baseline.py
src/LVLMRecovery/Tracking/: Track_and_move.py
src/LVLMRecovery/depth_estimation/: stero_depth.py
src/LVLMRecovery/util/: prompts_gt.py
